[gd_scene load_steps=8 format=3 uid="uid://c5m12u5356hcl"]

[ext_resource type="Script" path="res://scenes/play/Level_Container/level4/puzzle.gd" id="1_bo8pt"]
[ext_resource type="FontFile" uid="uid://daxif0slp5mli" path="res://assets/font/ComicNeueAngular-Regular.ttf" id="2_2gesj"]
[ext_resource type="Texture2D" uid="uid://8lnuql67ep3f" path="res://assets/unlock_full.png" id="3_0mpig"]
[ext_resource type="Texture2D" uid="uid://ctmqhmx7qlxls" path="res://assets/home_page/Button_01.png" id="3_1aj2a"]
[ext_resource type="Script" path="res://CloseButton.gd" id="4_l2qsd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2qok0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_swn8u"]

[node name="puzzle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bo8pt")

[node name="CheckButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.5
offset_top = -98.0
offset_right = 48.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Check"

[node name="Grid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.5
offset_top = -148.0
offset_right = 4.5
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_2gesj")
theme_override_font_sizes/font_size = 35

[node name="ColumnClues" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.0
offset_top = 98.0
offset_right = 360.0
offset_bottom = 224.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)

[node name="RowClues" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 386.0
offset_top = -102.0
offset_right = 566.0
offset_bottom = 285.0
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="CloseControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="CloseControl"]
modulate = Color(0.839216, 0.858824, 0.87451, 0.47451)
layout_mode = 0
offset_left = -109.0
offset_top = 33.0
offset_right = -6.0
offset_bottom = 110.0
texture = ExtResource("3_1aj2a")

[node name="CloseButton" type="Button" parent="CloseControl"]
layout_mode = 0
offset_left = -107.0
offset_top = 34.0
offset_right = -10.0
offset_bottom = 105.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2qok0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_swn8u")
text = "Quit"
script = ExtResource("4_l2qsd")

[node name="UnlockImage" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0mpig")

[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
